--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-x<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Web App</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+    <title>Oracle Cloud Infrastructure Consultancy</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -13,7 +12,7 @@ x<!DOCTYPE html>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Sample Web App</a>
+            <a class="navbar-brand" href="#">Oracle Cloud Infrastructure Consultancy</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,10 +23,13 @@ x<!DOCTYPE html>
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -36,24 +38,66 @@ x<!DOCTYPE html>
 </header>
 
 <main>
-    <div class="container mt-4">
-        <h1>Welcome to our Sample Web App</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus eget nibh finibus feugiat vel vitae
-            diam. Vestibulum tincidunt, sapien eget hendrerit sagittis, ligula eros interdum tortor, a tincidunt odio
-            lectus vel tellus.</p>
-    </div>
+    <section id="hero" class="bg-light text-center py-5">
+        <div class="container">
+            <h1>Welcome to Oracle Cloud Infrastructure Consultancy</h1>
+            <p>Get expert guidance for your cloud infrastructure projects</p>
+            <a href="#contact" class="btn btn-primary">Get in touch</a>
+        </div>
+    </section>
+
+    <section id="about" class="py-5">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus eget nibh finibus feugiat vel vitae
+                diam. Vestibulum tincidunt, sapien eget hendrerit sagittis, ligula eros interdum tortor, a tincidunt odio
+                lectus vel tellus.</p>
+        </div>
+    </section>
+
+    <section id="services" class="bg-light py-5">
+        <div class="container">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Oracle Cloud Infrastructure Architecture Design</li>
+                <li>Migration to Oracle Cloud Infrastructure</li>
+                <li>Optimization and Performance Tuning</li>
+                <li>Security and Compliance</li>
+                <li>24/7 Support and Monitoring</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </section>
 </main>
 
 <footer class="bg-dark text-light text-center py-3 mt-5">
     <div class="container">
-        &copy; 2023 Sample Web App. All rights reserved.
+        &copy; 2023 Oracle Cloud Infrastructure Consultancy. All rights reserved.
     </div>
 </footer>
 
 <script src="js/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
