--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oracle Cloud Infrastructure Consultancy</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 </header>
 
 <main>
-    <section id="hero" class="bg-light text-center py-5">
+    <section id="hero">
         <div class="container">
             <h1>Welcome to Oracle Cloud Infrastructure Consultancy</h1>
             <p>Get expert guidance for your cloud infrastructure projects</p>
@@ -46,7 +47,7 @@
         </div>
     </section>
 
-    <section id="about" class="py-5">
+    <section id="about">
         <div class="container">
             <h2>About Us</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus eget nibh finibus feugiat vel vitae
@@ -55,33 +56,63 @@
         </div>
     </section>
 
-    <section id="services" class="bg-light py-5">
+    <section id="services" class="bg-light">
         <div class="container">
             <h2>Our Services</h2>
-            <ul>
-                <li>Oracle Cloud Infrastructure Architecture Design</li>
-                <li>Migration to Oracle Cloud Infrastructure</li>
-                <li>Optimization and Performance Tuning</li>
-                <li>Security and Compliance</li>
-                <li>24/7 Support and Monitoring</li>
+            <ul class="service-list">
+                <li>
+                    <div class="service-icon">
+                        <i class="bi bi-layers"></i>
+                    </div>
+                    <h3>Oracle Cloud Infrastructure Architecture Design</h3>
+                    <p>Get customized architecture designs for your Oracle Cloud Infrastructure projects.</p>
+                </li>
+                <li>
+                    <div class="service-icon">
+                        <i class="bi bi-arrow-repeat"></i>
+                    </div>
+                    <h3>Migration to Oracle Cloud Infrastructure</h3>
+                    <p>Seamlessly migrate your applications and workloads to Oracle Cloud Infrastructure.</p>
+                </li>
+                <li>
+                    <div class="service-icon">
+                        <i class="bi bi-speedometer2"></i>
+                    </div>
+                    <h3>Optimization and Performance Tuning</h3>
+                    <p>Improve the performance and efficiency of your cloud infrastructure.</p>
+                </li>
+                <li>
+                    <div class="service-icon">
+                        <i class="bi bi-shield-lock"></i>
+                    </div>
+                    <h3>Security and Compliance</h3>
+                    <p>Ensure the security and compliance of your cloud environment.</p>
+                </li>
+                <li>
+                    <div class="service-icon">
+                        <i class="bi bi-clock-history"></i>
+                    </div>
+                    <h3>24/7 Support and Monitoring</h3>
+                    <p>Get round-the-clock support and monitoring for your Oracle Cloud Infrastructure projects.</p>
+                </li>
             </ul>
         </div>
     </section>
 
-    <section id="contact" class="py-5">
+    <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
             <form>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
+                <div class="form-group">
+                    <label for="name">Name</label>
                     <input type="text" class="form-control" id="name" required>
                 </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
+                <div class="form-group">
+                    <label for="email">Email</label>
                     <input type="email" class="form-control" id="email" required>
                 </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
+                <div class="form-group">
+                    <label for="message">Message</label>
                     <textarea class="form-control" id="message" rows="4" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -90,7 +121,7 @@
     </section>
 </main>
 
-<footer class="bg-dark text-light text-center py-3 mt-5">
+<footer class="bg-dark text-light py-3">
     <div class="container">
         &copy; 2023 Oracle Cloud Infrastructure Consultancy. All rights reserved.
     </div>
@@ -98,6 +129,7 @@
 
 <script src="js/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/js/all.min.js"></script>
 </body>
 
 </html>
