--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
 </footer>
 
-<script src="js/scripts.js"></script>
+<script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/js/all.min.js"></script>
 </body>
