Changed the layout of the "Our Services" section.

--- a/index.html
+++ b/index.html
@@ -50,54 +50,63 @@
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus eget nibh finibus feugiat vel vitae
-                diam. Vestibulum tincidunt, sapien eget hendrerit sagittis, ligula eros interdum tortor, a tincidunt odio
-                lectus vel tellus.</p>
+            <p>At Oracle Cloud Infrastructure Consultancy, we are dedicated to providing top-notch expertise and guidance for your cloud infrastructure projects. With years of experience and a deep understanding of Oracle Cloud Infrastructure, our team of skilled consultants is committed to helping businesses leverage the full potential of this powerful platform.</p>
+            <p>Our mission is to assist organizations in architecting, optimizing, and securing their cloud infrastructure on Oracle Cloud. We offer a range of services tailored to meet the unique needs of each client, including architecture design, migration, performance tuning, security and compliance, and 24/7 support and monitoring.</p>
+            <p>With a customer-centric approach, we work closely with our clients to understand their specific requirements and deliver solutions that drive success. Our team combines technical expertise with industry best practices to ensure that your cloud infrastructure is efficient, scalable, and secure.</p>
+            <p>Whether you are just starting your journey to the cloud or looking to enhance your existing infrastructure, we are here to guide you every step of the way. Partner with Oracle Cloud Infrastructure Consultancy and unlock the full potential of Oracle Cloud Infrastructure for your business.</p>
         </div>
     </section>
 
     <section id="services" class="bg-light">
         <div class="container">
             <h2>Our Services</h2>
-            <ul class="service-list">
-                <li>
-                    <div class="service-icon">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item">
                         <i class="bi bi-layers"></i>
+                        <h3>Oracle Cloud Infrastructure Architecture Design</h3>
+                        <p>Get customized architecture designs for your Oracle Cloud Infrastructure projects.</p>
                     </div>
-                    <h3>Oracle Cloud Infrastructure Architecture Design</h3>
-                    <p>Get customized architecture designs for your Oracle Cloud Infrastructure projects.</p>
-                </li>
-                <li>
-                    <div class="service-icon">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item">
                         <i class="bi bi-arrow-repeat"></i>
+                        <h3>Migration to Oracle Cloud Infrastructure</h3>
+                        <p>Seamlessly migrate your applications and workloads to Oracle Cloud Infrastructure.</p>
                     </div>
-                    <h3>Migration to Oracle Cloud Infrastructure</h3>
-                    <p>Seamlessly migrate your applications and workloads to Oracle Cloud Infrastructure.</p>
-                </li>
-                <li>
-                    <div class="service-icon">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item">
                         <i class="bi bi-speedometer2"></i>
+                        <h3>Optimization and Performance Tuning</h3>
+                        <p>Improve the performance and efficiency of your cloud infrastructure.</p>
                     </div>
-                    <h3>Optimization and Performance Tuning</h3>
-                    <p>Improve the performance and efficiency of your cloud infrastructure.</p>
-                </li>
-                <li>
-                    <div class="service-icon">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item">
                         <i class="bi bi-shield-lock"></i>
+                        <h3>Security and Compliance</h3>
+                        <p>Ensure the security and compliance of your cloud environment.</p>
                     </div>
-                    <h3>Security and Compliance</h3>
-                    <p>Ensure the security and compliance of your cloud environment.</p>
-                </li>
-                <li>
-                    <div class="service-icon">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item">
                         <i class="bi bi-clock-history"></i>
+                        <h3>24/7 Support and Monitoring</h3>
+                        <p>Get round-the-clock support and monitoring for your Oracle Cloud Infrastructure projects.</p>
                     </div>
-                    <h3>24/7 Support and Monitoring</h3>
-                    <p>Get round-the-clock support and monitoring for your Oracle Cloud Infrastructure projects.</p>
-                </li>
-            </ul>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item">
+                        <i class="bi bi-briefcase"></i>
+                        <h3>Customized Consultancy</h3>
+                        <p>Receive personalized consultancy services tailored to your specific business needs.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+
 
     <section id="contact">
         <div class="container">
