Changed the layout of the "Our Services" section with additional copy.

--- a/index.html
+++ b/index.html
@@ -65,47 +65,48 @@
                     <div class="service-item">
                         <i class="bi bi-layers"></i>
                         <h3>Oracle Cloud Infrastructure Architecture Design</h3>
-                        <p>Get customized architecture designs for your Oracle Cloud Infrastructure projects.</p>
+                        <p>Our expert team will provide you with customized architecture designs that maximize the potential of Oracle Cloud Infrastructure. We take into consideration your specific requirements, scalability needs, and security considerations to create a robust and efficient architecture.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service-item">
                         <i class="bi bi-arrow-repeat"></i>
                         <h3>Migration to Oracle Cloud Infrastructure</h3>
-                        <p>Seamlessly migrate your applications and workloads to Oracle Cloud Infrastructure.</p>
+                        <p>Smoothly transition your applications and workloads to Oracle Cloud Infrastructure with our migration services. We ensure minimal disruption and downtime during the migration process, enabling you to take advantage of the scalability, performance, and cost-efficiency of Oracle Cloud.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service-item">
                         <i class="bi bi-speedometer2"></i>
                         <h3>Optimization and Performance Tuning</h3>
-                        <p>Improve the performance and efficiency of your cloud infrastructure.</p>
+                        <p>Improve the performance and efficiency of your cloud infrastructure with our optimization and performance tuning services. Our experts analyze your system, identify bottlenecks, and implement optimizations to ensure your Oracle Cloud Infrastructure operates at its peak, delivering optimal speed and reliability.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service-item">
                         <i class="bi bi-shield-lock"></i>
                         <h3>Security and Compliance</h3>
-                        <p>Ensure the security and compliance of your cloud environment.</p>
+                        <p>Protect your cloud environment and ensure compliance with our comprehensive security and compliance services. We implement robust security measures, including identity and access management, data encryption, and proactive monitoring, to safeguard your critical assets and meet industry regulations.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service-item">
                         <i class="bi bi-clock-history"></i>
                         <h3>24/7 Support and Monitoring</h3>
-                        <p>Get round-the-clock support and monitoring for your Oracle Cloud Infrastructure projects.</p>
+                        <p>Gain peace of mind with our 24/7 support and monitoring services for your Oracle Cloud Infrastructure projects. Our dedicated team of experts is available around the clock to provide assistance, resolve issues, and ensure the smooth operation of your cloud environment, so you can focus on your core business.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service-item">
                         <i class="bi bi-briefcase"></i>
                         <h3>Customized Consultancy</h3>
-                        <p>Receive personalized consultancy services tailored to your specific business needs.</p>
+                        <p>We understand that every business is unique. That's why we offer customized consultancy services tailored to your specific needs. Our consultants work closely with you to understand your goals, challenges, and requirements, providing personalized guidance and expertise to help you achieve success with Oracle Cloud Infrastructure.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
 
     <section id="contact">
